Thu Dec  4 18:37:13 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

	* orbsvcs/tests/AVStreams/Component_Switching/receiver.cpp:
	  Fixed incorrect method name in ACE_PRINT_EXCEPTION

	* orbsvcs/tests/AVStreams/Component_Switching/receiver.{h,cpp}:
	  Fixed emulated exception build

Thu Dec  4 16:45:34 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

	* orbsvcs/tests/Bug_1630_Regression/testclient.cpp:
	  Fixed compile problem with emulated exceptions

Thu Dec  4 09:09:13 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

	* tao/RTCORBA/RT_Mutex.h:
          In case TAO_HAS_NAMED_RT_MUTEXES is set to 1, include
          ace/SString.h to get ACE_CString.

Wed Dec  3 10:12:18 2003  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/CodeSets/libs/Makefile:
        * tests/CodeSets/UCS4_UTF16/CodeSets_libs_UCS4_UTF16.mpc:
        * tests/CodeSets/UCS4_UTF16/Makefile:
        * tests/CodeSets/UCS4_UTF16/WUCS4_UTF16.cpp:
        * tests/CodeSets/UCS4_UTF16/WUCS4_UTF16.h:
        * tests/CodeSets/UCS4_UTF16/WUCS4_UTF16_Factory.cpp:
        * tests/CodeSets/UCS4_UTF16/WUCS4_UTF16_Factory.h:
        * tests/CodeSets/UCS4_UTF16/WUCS4_UTF16_export.h:
        * tests/CodeSets/simple/README:
        * tests/CodeSets/simple/cs_test.conf:
        * tests/CodeSets/simple/wcs_test.conf:

          Added example codeset translator for wide characters. The new
          translator converts from native UCS-4, 4-bytes per codepoint, to
          a transmission codeset of UTF-16, aka unicode.

Wed Dec  3 16:05:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

	* tests/UNKNOWN_Exception/UNKNOWN_Exception_Client.bor:
	* tests/UNKNOWN_Exception/UNKNOWN_Exception_Server.bor:
	* tests/Timeout/client.bor:
	* tests/Timeout/server.bor:
	  Added missing Id tag

Wed Dec  3 09:41:59 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_traits.cpp:
        * TAO_IDL/be_include/be_visitor_traits.h:
