@@ -1,3 +1,15 @@
+Thu Dec  4 14:15:51 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * tao/TypeCodeFactory/TypeCodeFactory_i.cpp (unique_label_values):
+
+          Assigned a struct literal to a local struct variable instead
+          of initializing each member individually. This enables 
+          TypeCodeFactory to build when ACE_LACKS_LONGLONG_T is defined,
+          since the struct contains all the IDL basic types that are
+          legal for union discriminators, including longlong. Thanks
+          to Gary Maxey <gary.maxey@hp.com> for reporting the problem.
+          This closes [BUGID:1664].
+
 Thu Dec  4 18:37:13 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
 
 	* orbsvcs/tests/AVStreams/Component_Switching/receiver.cpp:
